testsuite/tests/grammar/invalid_lkt/no_main_rule.lkt
import common
import lexer_example

@with_lexer(foo_lexer) grammar foo_grammar {
    rule1 <- Example("example")
}
